# website

./: .gitignore  404.html  Makefile  README.md  index.html  pyproject.toml  requirements.txt  rxconfig.py  sitemap-0.xml  vercel.json
.github/workflows/: build-and-deploy.yaml  deploy.yaml  deployment.yaml  pipeline.yaml
404/: index.html
_next/static/VniinzKfsNYBg2of9Vvnz/: _buildManifest.js
_next/static/chunks/pages/: _app-a492c757c5b01dd2.js  _app-aaa99f4c9da3d54e.js  _app-b30b24842b127f79.js  index-06e2cbf6a0113b3e.js  index-509811619b3f755e.js
_next/static/css/: 6b428ab4125253f7.css
_next/static/zA99xD4W8Oj25ZxA5Znzf/: _buildManifest.js
assets/css/: font.css  style.css
assets/files/: pytorch_conf.pptx  stanford.pptx
website/: __init__.py  publications.py  website.py
website/components/: buttons.py  cards.py  menu.py
website/pages/: certifications.py  courses.py  education.py  experience.py  home.py  index.py  publications.py  talks.py
