[project]
name = "website"
version = "0.1.0"
description = "osllogon personal website"
authors = [
    {name = "Oscar Llorente", email = "oscar.llorente.gonzalez@ericsson.com"},
]
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "black==25.1.0",
    "complexipy==1.2.0",
    "flake8==7.1.2",
    "Flake8-pyproject==1.2.3",
    "pylint==3.3.5",
    "mypy==1.15.0",
    "reflex==0.6.1"
]

[tool.black]
line-length = 88
preview = true
enable-unstable-feature = ["string_processing"]
exclude = '''
/(
  \.venv
)/
'''

[tool.flake8]
max-line-length = 88
extend-ignore = "E203, W503"
exclude = [".venv/"]

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true
exclude = [
    "^(build|dist|venv)",
]
cache_dir = "/dev/null"

[tool.pylint]
max-line-length = 88
disable = "R0801,R0912,R0913,R0914,R0915,R0917,R1711,R1732,W1203,R0902,W0707,C0114"

[tool.pylint.MASTER]
ignore-paths = [".venv/"]

